# trac-to-phabricator

./: LICENSE  README.md  stack.yaml  trac-to-phabricator.cabal
app/: Main.hs
maniphest-config/: maniphest.custom-field-definitions.json  maniphest.editdependencies.php  maniphest.statuses.json
src/: Config.hs  Lib.hs  Phabricator.hs  Trac.hs  Types.hs
src/Network/Conduit/: Client.hs
