name:                trac-to-phabricator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/danpalmer/trac-to-phabricator#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Palmer
maintainer:          dan@danpalmer.me
copyright:           2016 Dan Palmer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Network.Conduit.Client
                     , Network.Http.Client.Extras
                     , Phabricator
                     , Trac
                     , Config
                     , Types
                     , Util
                     , Config
  build-depends:       base >= 4.7 && < 5
                     , time
                     , network-uri
                     , text
                     , bytestring
                     , http-client
                     , http-streams
                     , io-streams
                     , aeson
                     , base16-bytestring
                     , cryptonite
                     , cryptohash
                     , postgresql-simple
                     , mysql-haskell
                     , trac-to-remarkup
                     , containers
                     , network
                     , base64-bytestring
                     , mime-types
                     , unordered-containers
                     , uri-encode
                     , directory
  default-language:    Haskell2010

executable trac-to-phabricator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trac-to-phabricator
  default-language:    Haskell2010

test-suite trac-to-phabricator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trac-to-phabricator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danpalmer/trac-to-phabricator
